Tue Jun  3 09:20:00 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* eval.c: fix compilation with -DGARY_CACHE

Mon Jun  2 23:19:22 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (GTKShowTempMap): remove gtk_aspect_frame for now.

Mon Jun  2 23:11:02 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (UpdateMapEquities): show best move in tool tip.

Mon Jun  2 22:32:28 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (ExposeDie, GTKShowTempMap): dynamic resizing of
	dice.

Mon Jun 02 17:11:48 2003  Holger Bochnig <hbgg@gmx.net>

        * gtktempmap.c (ExposeDie): bug fix: after a resize artefacts
          of the old dice remained

Sun Jun  1 22:39:24 2003  Joern Thyssen  <jth@gnubg.org>

	Several improvements to temp. maps.

	* gtktempmap.c: several improvements.

Sun Jun  1 13:04:08 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (CalTempMapEquities): invert fMove before
	call to evaluation.
	* eval.c: replace "default" move filter with "normal" movefilter.
	(bugs reported by Ned Cross)

Sat May 31 18:54:34 2003  Joern Thyssen  <jth@gnubg.org>

	Add ply-buttons to theory widget
	(suggested by Albert Silver)

	* gtktheory.c (PlyClicked): new routine.
	* gtktheory.c (GTKShowTheory): add radio buttons for plies.	

Fri May 30 21:27:04 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (GTKShowTempMap): make dialog non-modal.
	* gtkchequer.c (CreateMoveListTools): add temp. map button.
	* gtkchequer.c (MoveListTempMapClicked): call temp. map.

Fri May 30 20:43:50 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c: improvements of temperature map.
	(suggested by Ian Shaw and Michael Depreli)

Fri May 30 17:41:42 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_set): move calculation of nchequers to
	_after_ bd->points[26] and bd->points[27] has been calculated.
	* gtkboard.c (write_points): fix sign bug.
	(bug #3806 reported by Henrik Ravn)

Fri May 30 12:58:27 2003  Joern Thyssen  <jth@gnubg.org>
